Fix vertical-align on images flags in the navbar

--- a/styles/all/theme/quicklanguage.css
+++ b/styles/all/theme/quicklanguage.css
@@ -19,3 +19,8 @@
     opacity:1.0;
     filter:alpha(opacity=100); 
 }
+
+.lang_form
+{
+    padding: 5px;
+}
